--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 v0.3.4-Snapshot:
   changes:
-    - added devbliss-recess
+    - added devbliss-recess, devbliss-concat, devbliss-copy, devbliss-jshint
     - added devbliss-watch
     - refactored into modules
 v0.3.3:
