--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-v0.3.4-Snapshot:
+v0.3.4:
+  date: 2015-01-28 
   changes:
     - added devbliss-recess, devbliss-concat, devbliss-copy, devbliss-jshint
     - added devbliss-watch
