--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 v0.4.0-SNAPSHOT:
   date: 2015-01-29
   changes:
+    - fix: copy font files, not only directories
     - added devbliss-clean, devbliss-rev, devbliss-processhtml
     - added devbliss-htmlmin, devbliss-usemin, devbliss-useminPrepare
 v0.3.4:
