--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,9 @@
-v0.8.1-SNAPSHOT:
-  date: 2015-02-13
+v0.9.0:
+  date: 2015-02-18
   changes:
     - removed function parameter limitation, added X2JS as global
     - added some missing unittests
+    - renamed src in recess task from Base.less to base.less
 v0.8.0:
   date: 2015-02-12
   changes:
