--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.10.0-SNAPSHOT:
+  date: 2015-02-20
+  changes:
+    - use eslint instead of jshint for style rules checks
 v0.9.0:
   date: 2015-02-18
   changes:
