--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+v1.0.0:
+  date: 2015-05-17
+  changes:
+    - rename plugin to devbliss-grunt-conventions
+
+
 v0.10.3:
   date: 2015-04-07
   changes:
