--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v1.1.0-SNAPSHOT:
+  date: 2015-05-21
+  changes:
+    - add pull_request.md containing the reviews checklist
 v1.0.0:
   date: 2015-05-17
   changes:
